// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cjs 1`] = `
"/* Auto generated by fireschema */

const importModule = (functionNames: string[], modulePath: string) => {
  return !process.env['FUNCTION_NAME'] ||
    functionNames.includes(process.env['FUNCTION_NAME'])
    ? require(modulePath)
    : undefined
}

import type * as __callable_test___ from './callable/test_'

export const callable = {
  ...importModule(['callable-test'], './callable/test_'),
}

export type FunctionsModule = {
  callable: typeof __callable_test___
}
"
`;

exports[`esm 1`] = `
"/* Auto generated by fireschema */

const importModule = (functionNames: string[], modulePath: string) => {
  return !process.env['FUNCTION_NAME'] ||
    functionNames.includes(process.env['FUNCTION_NAME'])
    ? import(modulePath)
    : undefined
}

import type * as __callable_test___ from './callable/test_'

export const callable = {
  ...(await importModule(['callable-test'], './callable/test_')),
}

export type FunctionsModule = {
  callable: typeof __callable_test___
}
"
`;
